--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -10,9 +10,10 @@ $color1 : #000000;
 $color2 : #FFFFFF;
 $color3 : #9f0e15;
 $color4 : #1a1a1a;
-$color5 : #e8e8e8;
-$color6 : #ffff00;
-$color7 : #f2f2f2;
+$color5 : #4d4d4d;
+$color6 : #f2f2f2;
+
+$color7 : #ffff00;
 $color8 : #808080;
 $color9 : #333333;
 $color10: #4d4d4d;
