--- a/scss/_var.scss
+++ b/scss/_var.scss
@@ -104,8 +104,12 @@ a:hover, a:focus, a:active, button:hover, button:focus, button:active {
     position: relative;
 }
 
-.grid-1200{
-    max-width: 1200px;
+.grid-1716{
+    max-width: 1716px;
+}
+
+.grid-1115{
+    max-width: 1115px;
 }
 
 .txt_center{
@@ -130,6 +134,99 @@ a[href^="tel:"] {
     line-height: 100%;
 }
 
-.show_sp{
+.show__sp{
     display: none;
+}
+
+.button{
+    &__contact{
+        background: $color2 url('../img/arrow_right__01.svg') no-repeat center right 18px;
+        border-radius: 24px;
+        padding: 12px;
+        width: 100%;
+        max-width: 250px;
+        margin-right: 32px;
+        border: $color3 solid 1px;
+        padding-right: 30px;
+        background-size: 13px;
+        @include setting_text($color3, 16px, 700, 150%, 0);
+        
+        @include transition(0.35s);
+
+        &:hover{
+            @include transition(0.35s);
+            color: $color2;
+            border-color: $color2;
+            background: linear-gradient(90deg, rgba(159,14,21,1) 0%, rgba(96,15,19,1) 100%);
+            background-image: url('../img/arrow_right__01__hv.svg');
+            background-repeat: no-repeat;
+            background-position: center right 18px;
+            background-size: 13px;
+        }
+
+        &-inner{
+            @include setting_text($color2, 19px, 700, 150%, 0);
+            background: linear-gradient(90deg, rgba(159,14,21,1) 0%, rgba(96,15,19,1) 100%);
+            border-radius: 28px;
+            width: 100%;
+            max-width: 250px;
+            padding: 14px 14px 14px 35px;
+            position: relative;
+            @include transition(0.35s);
+            z-index: 0;
+            &::before{
+                @include before(30px,22px);
+                top: 50%;
+                transform: translateY(-50%);
+                left: 30px;
+                background: url('../img/icon_email.svg');
+                background-size: cover;
+            }
+            &::after{
+                @include before(calc(100% - 3px), calc(100% - 3px));
+                z-index: -1;
+                border-radius: 28px;
+                top: 1px;
+                left: 1px;
+                @include transition(0.35s);
+            }
+            &:hover{
+                @include transition(0.35s);
+                color: $color3;
+                // background: $color2;
+                &::before{
+                    background-image: url('../img/icon_email_hv.svg');
+                }
+
+                &::after{
+                    background: $color2;
+                    @include transition(0.35s);
+                }
+            }
+        }
+    }
+}
+
+.title{
+    &__contact{        
+        margin-bottom: 20px;
+        @include setting_text($color2, 30px, 600, 150%, 0);
+    }
+    &__company{
+        padding-bottom: 6px;
+        @include setting_text($color2, 20px, 700, 150%, -1px);
+    }
+}
+
+.contact{
+    &__text{
+        padding-bottom: 25px;
+        p{
+            @include setting_text($color2, 17px, 400, 175%, 0);
+        }
+    }
+
+    &__tel{
+        
+    }
 }
