--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -3,7 +3,7 @@
     display: flex;
     align-items: center;
     position: relative;
-
+    z-index: 1;
     &__left{
         width: 615px;
     } 
